[project]
name = "hepo"
version = "0.1.0"
description = "Heuristic Enchanced Policy Optimization implementation in stable-baselines3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium==0.29.1",
    "numpy>=1.23.5,<2.0.0",
    "stable-baselines3[extra]>=2.7.0",
    "tensorboard>=2.16,<2.17",
    "torch==2.3.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
